--- a/src/css/index.css
+++ b/src/css/index.css
@@ -134,10 +134,28 @@ table {
     margin: auto;
 }
 
-td, td {
-    padding: 15px;
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
     text-align: left;
+    background-color: #3283ecca;
+      color: white;
 }
+
+table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+  
+table td, table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+table tr:nth-child(even){background-color: #f2f2f2;}
+
+table tr:hover {background-color: #ddd;}
 
 .cad_livro {
     background-color: #30b572;
